[gd_scene load_steps=4 format=3 uid="uid://boyuykiegxq6s"]

[ext_resource type="Script" uid="uid://bxgis848rqwjj" path="res://scripts/gamepack_ranking.gd" id="1_u0ll7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1n7n"]
bg_color = Color(0.95281494, 0.78818816, 0.41551143, 1)
skew = Vector2(0.3, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4japl"]
bg_color = Color(0.95281494, 0.78818816, 0.41551143, 0.8)
skew = Vector2(0.3, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[node name="GamePackRanking" type="Control"]
custom_minimum_size = Vector2(425, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 436.0
offset_bottom = 64.0
script = ExtResource("1_u0ll7")

[node name="Panel" type="Panel" parent="."]
z_index = 1
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
offset_left = 7.0
offset_right = 287.0
offset_bottom = 64.0
theme_override_styles/panel = SubResource("StyleBoxFlat_r1n7n")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Ranking" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "#1"
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Max combo"
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="MaxCombo" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.34826145, 0.20538445, 0.30270818, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "69x"
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -195.0
offset_right = -13.0
offset_bottom = 64.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4japl")

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 46
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2/MarginContainer"]
layout_mode = 2

[node name="Points" type="RichTextLabel" parent="Panel2/MarginContainer/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "431.314"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
